--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -90,8 +90,6 @@
                 content: "";
                 position: absolute;
                 right: 0;
-
-
             }
 
             &::before {
@@ -103,7 +101,7 @@
             }
 
         }
-        
+
         &-item {
             font-family: 'Nunito', sans-serif;
             font-weight: 400;
@@ -340,7 +338,7 @@
 
     &__img {
 
-        filter: grayscale(100%);
+        // filter: grayscale(100%);
 
         &-1 {
             width: 50px;
