--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -39,17 +39,18 @@
         top: 0;
         right: 0;
         z-index: 100;
-        transition: transform .8s;
-        width: 0;
-
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.97);
+        
         &-icon {
             position: fixed;
             cursor: pointer;
             z-index:200;
-            width: 4rem;
+            width: 3rem;
             height: 3.5rem;
             top: 3.5rem;
-            right: 4.5rem;
+            right: 5rem;
         }
 
         &-list {
@@ -62,46 +63,41 @@
             left: 0;
             height:100vh;
             width: 100%;
-            // background-color: $white;
-            background-image: radial-gradient(#ccc, #eee);
-            transition: all .8s;
-
+            z-index: 200;
+            
+        }
+            
+        &-line-1,
+        &-line-2,
+        &-line-3 {
+            width: 3.2rem;
+            height: 4px;
+            border-radius: 8px;
+            background-color: $font-color;
+            display: inline-block;
+            cursor: pointer;
         }
 
-        &-lines {
-            position: fixed;
-            top: 5rem;
-            right: 5rem;
-            cursor: pointer;
-            width: 3rem;
-            height: 4rem;
+        &-line-1 {
+            position: absolute;
+            top: .5rem;
+            right: 0;
+        }
+        
+        &-line-2 {
+            position: absolute;
+            top: 1.5rem;
+            right: 0;
 
-            &,
-            &::before,
-            &::after {
-                width: 3rem;
-                height: 4px;
-                background-color: $font-color;
-                display: inline-block;
+            &:active {
+                display: none;   
             }
-
-            &::before,
-            &::after {
-                content: "";
-                position: absolute;
-                right: 0;
-
-
-            }
-
-            &::before {
-                top: -.8rem;
-            }
-
-            &::after {
-                top: .8rem;
-            }
-
+        }
+        
+        &-line-3 {
+            position: absolute;
+            top: 2.5rem;
+            right: 0rem;
         }
         
         &-item {
@@ -115,55 +111,72 @@
             padding: 1rem 5rem;
             margin-bottom: 1rem;
             line-height: 1.5;
-
-            // &:not(:last-child) {
-            //     margin-right: 3rem;
-            // }
         }
 
         &-link {
-            color: $font-color;
+            color: $gray-light;
             
 
             &:link,
             &:visited {
                 padding: 1rem 5rem;
-                color: $font-color;
+                color: $white;
                 transition: all .2s;
 
             }
 
             &:hover,
             &:active {
-                background-color: $font-color;
-                color: $white;
+                background-color: $gray-light;
+                color: $font-color;
             }
         }
     }
+}
+
+.header__nav-icon.close .header__nav-line-2 {
+    display: none;
+}
+
+.header__nav-icon.close .header__nav-line-1 {
+    transform: rotate(135deg) translate(5px, -6px);
+    width: 3.6rem;
+    background-color: $gray-light;
+}
+
+.header__nav-icon.close .header__nav-line-3 {
+    transform: rotate(45deg) translate(-7px, -10px);
+    width: 3.6rem;
+    background-color: $gray-light;
 }
 
 .cta {
     height: calc(100vh - 10rem);
     max-width: 1450px;
     margin: 0 auto;
-    padding: 10rem 10rem 15rem 10rem;
+    padding: 16rem 10rem 15rem 10rem;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-content: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
 
     &__heading {
         font-size: 10rem;
         padding-bottom: 3rem;
         font-family: 'Nunito', sans-serif;
-        align-self: flex-start;
+        // align-self: flex-start;
         font-weight: 400;
     }
 
     &__button {
         transition: all .2s ease;
         transform: scale(0.98, 0.98);
+        justify-self: start;
+        align-self: start;
 
         &,
         &:link,
@@ -175,7 +188,7 @@
             background-color: $font-color;
             padding: 1.5rem 8rem;
             border-radius: .5rem;
-            align-self: flex-start;
+            // align-self: flex-start;
         }
 
         &:hover {
@@ -196,6 +209,8 @@
     background-color: $gray-lightest;
 
     display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-rows: 1fr 3fr;
     grid-template-columns: repeat(3, minmax(20rem, 35rem));
     // grid-template-rows: 15rem minmax(15rem, 1fr) 10rem minmax(15rem, 1fr); (two rows)
     grid-template-rows: 15rem minmax(15rem, 1fr);
@@ -228,7 +243,7 @@
     }
 
     &__img {
-        box-shadow: 1rem 1rem 10rem rgba(0, 0, 0, 0.2);
+        box-shadow: $box-shadow-dark;
         transition: all .2s ease;
         display: block;
         width: 100%;
